<resources>
    <string name="app_name">My To do List</string>
    <string name="label_task">Tarefas</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Titulo</string>
    <string name="label_description">Descrição</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_Cancel">Cancelar</string>
    <string name="label_thoughtful">Pensativo</string>
    <string name="label_description_new_task">Nova Tarefa</string>
    <string name="label_edit">Editar</string>
    <string name="label_delete">Deletar</string>
    <string name="label_empty">WooHoo! Dia Livre!!! \n Vamos para o Moe\'s Bar</string>
</resources>